# djangocircle

./: .pdm-python  README.md  db.sqlite3  pyproject.toml  requiremenets.txt
.circleci/: config.yml
core/: settings.py  urls.py
tasks/: models.py  views.py
tasks/migrations/: 0001_initial.py
tests/tasks/: test_tasks.py
